<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.portfolio.udacity.android.popularmovies.DetailActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/activity_detail_movie_title_header"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_poster_iv"
        tools:layout_editor_absoluteX="16dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_detail_movie_release_date_header"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_detail_movie_vote_average_header"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_detail_movie_synopsis_header"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp"/>

    <ImageView
        android:id="@+id/activity_detail_poster_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="16dp"/>

    <TextView
        android:id="@+id/activity_detail_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_detail_movie_title"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:layout_editor_absoluteY="112dp"/>

    <TextView
        android:id="@+id/activity_detail_release_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_detail_movie_release_date"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:layout_editor_absoluteY="139dp"/>

    <TextView
        android:id="@+id/activity_detail_vote_average_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_detail_movie_vote_average"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:layout_editor_absoluteY="168dp"/>

    <TextView
        android:id="@+id/activity_detail_synopsis_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_detail_movie_synopsis"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:layout_editor_absoluteY="194dp"/>
</android.support.constraint.ConstraintLayout>
